[package]
name = "chaskey"
version = "0.1.2"
authors = ["Luis Casillas <luis@casillas.org>"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/sacundim/chaskey"
documentation = "http://sacundim.github.io/chaskey/chaskey/index.html"
homepage = "https://github.com/sacundim/chaskey"
description = "The Chaskey message authentication code (MAC)."

[dependencies]
byteorder = "0.5"
rustc-serialize = "0.3.19"

[dev-dependencies]
quickcheck = "0.2"
rand = "0.3.14"
